[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ultrabase64"
version = "1.0.5"
description = "Ultra-fast Base64 encoding/decoding library with SIMD and multithreading support"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT OR Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
keywords = ["base64", "encoding", "simd", "multithreading", "performance"]

[project.urls]
Homepage = "https://github.com/yourusername/ultrabase64"
Repository = "https://github.com/yourusername/ultrabase64"
Issues = "https://github.com/yourusername/ultrabase64/issues"

[tool.maturin]
features = ["pyo3/extension-module"]